# rs-dummy-record-generator

./: .gitignore  Cargo.toml  stuff.csv  users.csv
src/: generate.rs  main.rs  notes.md  read_users.rs  write_users.rs
