[package]
name = "dummy_record_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.4", features=['derive'] } 
rand = "0.8"
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
